complete card request

--- a/single-card.html
+++ b/single-card.html
@@ -25,32 +25,118 @@
           </div>
           <div class="oths">
             <img src="./images/stylovault5.svg" alt="" />
-            <h1><em>Visa</em></h1>
+            <img src="./images/visa.svg" alt="Bank 1 Logo" />
+            
           </div>
+        </div>
+        <!-- more action menus -->
+        <div class="action-menus">
+          <button onclick={clicked()}>
+            <div class="each">
+              <div class="img">
+                <img src="./images/Snowflakefreeze.svg" alt="">
+              </div>
+              <p >Freeze</p>
+            </div>
+          </button>
+
+          <button>
+            <div class="each">
+              <div class="img">
+                <img src="./images/greeneye.svg" alt="">
+              </div>
+              <p >Unknown</p>
+            </div>
+          </button>
+
+          <button>
+            <div class="each">
+              <div class="img">
+                <img src="./images/greeneye.svg" alt="">
+              </div>
+              <p >Details</p>
+            </div>
+          </button>
+
+          <a href="./manage-card.html">
+            <div class="each">
+              <div class="img">
+                <img src="./images/filter.svg" alt="">
+              </div>
+              <p >Manage</p>
+            </div>
+          </a>
         </div>
 
         <!-- card single items -->
-        <div class="menus-options">
-          <a href="./request-card.html">
-            <div class="options">
-              <div class="spec">
-                <h2>Request a physical card</h2>
-                <p>Place an order for a physical card</p>
+        <!-- other contents -->
+      <div class="others">
+        <div class="flex down">
+          <h2>Card Transactions</h2>
+          <a href="./card-transaction.html"> <p>See all</p></a>
+        </div>
+        <div class="menu-lists">
+          <!-- item -->
+          <a href="">
+            <div class="group item">
+              <div class="group">
+                <div class="imgg background-trend-up">
+                  <img src="./images/Arrow Upgreendown.svg" alt="" />
+                </div>
+                <div class="texts">
+                  <h3 class="main">Wallet Funding</h3>
+                  <p class="small">27 Jun 2023 | 02:17PM</p>
+                </div>
               </div>
-              <img src="./images/arrow-down.svg" alt="" />
+
+              <div class="texts">
+                <h3 class="main">₦8,500</h3>
+                <p class="small success">Successful</p>
+              </div>
             </div>
           </a>
 
-          <a href="./link-a-card.html">
-            <div class="options">
-              <div class="spec">
-                <h2>Link a Physical Card</h2>
-                <p>Map your physical card to your account</p>
+          <!-- md -->
+          <a href="">
+            <div class="group item">
+              <div class="group">
+                <div class="imgg background-trend-down">
+                  <img src="./images/Arrow Upreddown.svg" alt="" />
+                </div>
+                <div class="texts">
+                  <h3 class="main">Wallet Funding</h3>
+                  <p class="small">27 Jun 2023 | 02:17PM</p>
+                </div>
               </div>
-              <img src="./images/arrow-down.svg" alt="" />
+
+              <div class="texts">
+                <h3 class="main">₦8,500</h3>
+                <p class="small error">Failed</p>
+              </div>
+            </div>
+          </a>
+          <a href="">
+            <div class="group item">
+              <div class="group">
+                <div class="imgg background-trend-down">
+                  <img src="./images/Arrow Upreddown.svg" alt="" />
+                </div>
+                <div class="texts">
+                  <h3 class="main">Wallet Funding</h3>
+                  <p class="small">27 Jun 2023 | 02:17PM</p>
+                </div>
+              </div>
+
+              <div class="texts">
+                <h3 class="main">₦8,500</h3>
+                <p class="small pending">Pending</p>
+              </div>
             </div>
           </a>
         </div>
+      </div>
+        
+
       </div>
     </div>
 
