some more on card details

--- a/manage-card.html
+++ b/manage-card.html
@@ -79,7 +79,7 @@
                 </div>
             </a>
             <!-- item -->
-            <a href="./change-password.html" class="shadow">
+            <a href="" class="shadow">
                 <div class="card-item">
                     <div class="cardmonitored">
                         <img src="./images/replacecard.svg" alt="">
