--- a/single-card.html
+++ b/single-card.html
@@ -17,16 +17,36 @@
         </a>
       </div>
       <div class="container">
-        <div style="border-radius: 10px" class="card-header down">
-          <div class="teal">
-              <div class=""><p>5061 0000 0000 0123</p></div>
-              <img class="rotate-left" src="./images/teal.svg" alt="" />
-              <img  class="rotate-left" src="./images/Polygon 3.svg" alt="" />
-          </div>
-          <div class="oths">
-            <img src="./images/stylovault5.svg" alt="" />
-            <img src="./images/visa.svg" alt="Bank 1 Logo" />
-            
+        <div style="border-radius: 10px" class="coverhead color3">
+          <div class="rightie">
+            <div class="logoandbal">
+              <div class="bal">
+                <p>Available Balance</p>
+              <h3>₦147,000</h3>
+              </div>
+
+              <img src="./images/stylovault5.svg" alt="" />
+            </div>
+              <div class="tsh">
+                <h3>5061 0000 0000 0123</h3>
+                <div class="inn">
+                  <img class="" src="./images/teal.svg" alt="" />
+                  <img  class="rotate-left" src="./images/Polygon 3.svg" alt="" />
+                </div>
+              </div>
+              <div class="ths">
+                <div class="indie">
+                  <div class="index">
+                    <p>Expires</p>
+                    <h3>01/26</h3>
+                  </div>
+                  <div class="index">
+                    <p>CVV</p>
+                    <h3>123</h3>
+                  </div>
+                </div>
+                <img src="./images/visa.svg" color="#fff" alt="Bank 1 Logo" />
+              </div>
           </div>
         </div>
         <!-- more action menus -->
@@ -52,7 +72,7 @@
           <button>
             <div class="each">
               <div class="img">
-                <img src="./images/greeneye.svg" alt="">
+                <img src="./images/eye-off.svg" alt="">
               </div>
               <p >Details</p>
             </div>
@@ -67,7 +87,6 @@
             </div>
           </a>
         </div>
-
         <!-- card single items -->
         <!-- other contents -->
       <div class="others">
@@ -135,11 +154,8 @@
           </a>
         </div>
       </div>
-        
-
       </div>
     </div>
-
     <!-- modal -->
   </body>
 </html>
