--- a/single-card.html
+++ b/single-card.html
@@ -28,7 +28,10 @@
               <img src="./images/stylovault5.svg" alt="" />
             </div>
               <div class="tsh">
-                <h3>5061 0000 0000 0123</h3>
+                <div class="inn">
+                  <h3>5061 0000 0000 0123</h3>
+                <img src="./images/copy.svg" alt="">
+                </div>
                 <div class="inn">
                   <img class="" src="./images/teal.svg" alt="" />
                   <img  class="rotate-left" src="./images/Polygon 3.svg" alt="" />
@@ -51,7 +54,7 @@
         </div>
         <!-- more action menus -->
         <div class="action-menus">
-          <button onclick={clicked()}>
+          <button>
             <div class="each">
               <div class="img">
                 <img src="./images/Snowflakefreeze.svg" alt="">
@@ -60,7 +63,7 @@
             </div>
           </button>
 
-          <button>
+          <button >
             <div class="each">
               <div class="img">
                 <img src="./images/greeneye.svg" alt="">
@@ -69,10 +72,10 @@
             </div>
           </button>
 
-          <button>
+          <button >
             <div class="each">
               <div class="img">
-                <img src="./images/eye-off.svg" alt="">
+                <img src="./images/hide.svg" alt="">
               </div>
               <p >Details</p>
             </div>
