complete card details

--- a/single-card.html
+++ b/single-card.html
@@ -22,34 +22,36 @@
             <div class="logoandbal">
               <div class="bal">
                 <p>Available Balance</p>
-              <h3>₦147,000</h3>
+                <h3>₦147,000</h3>
               </div>
 
               <img src="./images/stylovault5.svg" alt="" />
             </div>
-              <div class="tsh">
-                <div class="inn">
-                  <h3>5061 0000 0000 0123</h3>
-                <img src="./images/copy.svg" alt="">
+            <div class="tsh">
+              <div class="inn">
+                <h3>5061 0000 0000 0123</h3>
+                <button onclick={#popup}>
+                  <img src="./images/copy.svg" alt="" />
+                </button>
+              </div>
+              <div class="inn">
+                <img class="" src="./images/teal.svg" alt="" />
+                <img class="rotate-left" src="./images/Polygon 3.svg" alt="" />
+              </div>
+            </div>
+            <div class="ths">
+              <div class="indie">
+                <div class="index">
+                  <p>Expires</p>
+                  <h3>01/26</h3>
                 </div>
-                <div class="inn">
-                  <img class="" src="./images/teal.svg" alt="" />
-                  <img  class="rotate-left" src="./images/Polygon 3.svg" alt="" />
+                <div class="index">
+                  <p>CVV</p>
+                  <h3>123</h3>
                 </div>
               </div>
-              <div class="ths">
-                <div class="indie">
-                  <div class="index">
-                    <p>Expires</p>
-                    <h3>01/26</h3>
-                  </div>
-                  <div class="index">
-                    <p>CVV</p>
-                    <h3>123</h3>
-                  </div>
-                </div>
-                <img src="./images/visa.svg" color="#fff" alt="Bank 1 Logo" />
-              </div>
+              <img src="./images/visa.svg" color="#fff" alt="Bank 1 Logo" />
+            </div>
           </div>
         </div>
         <!-- more action menus -->
@@ -57,108 +59,121 @@
           <button>
             <div class="each">
               <div class="img">
-                <img src="./images/Snowflakefreeze.svg" alt="">
+                <img src="./images/Snowflakefreeze.svg" alt="" />
               </div>
-              <p >Freeze</p>
+              <p>Freeze</p>
             </div>
           </button>
 
-          <button >
+          <button>
             <div class="each">
               <div class="img">
-                <img src="./images/greeneye.svg" alt="">
+                <img src="./images/greeneye.svg" alt="" />
               </div>
-              <p >Unknown</p>
+              <p>Unknown</p>
             </div>
           </button>
 
-          <button >
+          <button>
             <div class="each">
               <div class="img">
-                <img src="./images/hide.svg" alt="">
+                <img src="./images/hide.svg" alt="" />
               </div>
-              <p >Details</p>
+              <p>Details</p>
             </div>
           </button>
 
           <a href="./manage-card.html">
             <div class="each">
               <div class="img">
-                <img src="./images/filter.svg" alt="">
+                <img src="./images/filter.svg" alt="" />
               </div>
-              <p >Manage</p>
+              <p>Manage</p>
             </div>
           </a>
         </div>
         <!-- card single items -->
         <!-- other contents -->
-      <div class="others">
-        <div class="flex down">
-          <h2>Card Transactions</h2>
-          <a href="./card-transaction.html"> <p>See all</p></a>
+        <div class="others">
+          <div class="flex down">
+            <h2>Card Transactions</h2>
+            <a href="./card-transaction.html"> <p>See all</p></a>
+          </div>
+          <div class="menu-lists">
+            <!-- item -->
+            <a href="">
+              <div class="group item">
+                <div class="group">
+                  <div class="imgg background-trend-up">
+                    <img src="./images/Arrow Upgreendown.svg" alt="" />
+                  </div>
+                  <div class="texts">
+                    <h3 class="main">Wallet Funding</h3>
+                    <p class="small">27 Jun 2023 | 02:17PM</p>
+                  </div>
+                </div>
+
+                <div class="texts">
+                  <h3 class="main">₦8,500</h3>
+                  <p class="small success">Successful</p>
+                </div>
+              </div>
+            </a>
+
+            <!-- md -->
+            <a href="">
+              <div class="group item">
+                <div class="group">
+                  <div class="imgg background-trend-down">
+                    <img src="./images/Arrow Upreddown.svg" alt="" />
+                  </div>
+                  <div class="texts">
+                    <h3 class="main">Wallet Funding</h3>
+                    <p class="small">27 Jun 2023 | 02:17PM</p>
+                  </div>
+                </div>
+
+                <div class="texts">
+                  <h3 class="main">₦8,500</h3>
+                  <p class="small error">Failed</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <div class="group item">
+                <div class="group">
+                  <div class="imgg background-trend-down">
+                    <img src="./images/Arrow Upreddown.svg" alt="" />
+                  </div>
+                  <div class="texts">
+                    <h3 class="main">Wallet Funding</h3>
+                    <p class="small">27 Jun 2023 | 02:17PM</p>
+                  </div>
+                </div>
+
+                <div class="texts">
+                  <h3 class="main">₦8,500</h3>
+                  <p class="small pending">Pending</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-        <div class="menu-lists">
-          <!-- item -->
-          <a href="">
-            <div class="group item">
-              <div class="group">
-                <div class="imgg background-trend-up">
-                  <img src="./images/Arrow Upgreendown.svg" alt="" />
-                </div>
-                <div class="texts">
-                  <h3 class="main">Wallet Funding</h3>
-                  <p class="small">27 Jun 2023 | 02:17PM</p>
-                </div>
-              </div>
-
-              <div class="texts">
-                <h3 class="main">₦8,500</h3>
-                <p class="small success">Successful</p>
-              </div>
-            </div>
-          </a>
-
-          <!-- md -->
-          <a href="">
-            <div class="group item">
-              <div class="group">
-                <div class="imgg background-trend-down">
-                  <img src="./images/Arrow Upreddown.svg" alt="" />
-                </div>
-                <div class="texts">
-                  <h3 class="main">Wallet Funding</h3>
-                  <p class="small">27 Jun 2023 | 02:17PM</p>
-                </div>
-              </div>
-
-              <div class="texts">
-                <h3 class="main">₦8,500</h3>
-                <p class="small error">Failed</p>
-              </div>
-            </div>
-          </a>
-          <a href="">
-            <div class="group item">
-              <div class="group">
-                <div class="imgg background-trend-down">
-                  <img src="./images/Arrow Upreddown.svg" alt="" />
-                </div>
-                <div class="texts">
-                  <h3 class="main">Wallet Funding</h3>
-                  <p class="small">27 Jun 2023 | 02:17PM</p>
-                </div>
-              </div>
-
-              <div class="texts">
-                <h3 class="main">₦8,500</h3>
-                <p class="small pending">Pending</p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
       </div>
     </div>
     <!-- modal -->
+    <div id="popup" class="over">
+      <div class="errorcontainer">
+        <div class="lin">
+          <p class="rec"></p>
+          <img src="./images/noticeerror.svg" width="48px" alt="" />
+         <div class="side">
+          <h1>Copied!</h1>
+          <p>Card number successfully copied.</p>
+         </div>
+        </div>
+        <a class="closes" href="#">&times;</a>
+      </div>
+    </div>
   </body>
 </html>
