started credit profile

--- a/single-card.html
+++ b/single-card.html
@@ -30,7 +30,7 @@
             <div class="tsh">
               <div class="inn">
                 <h3>5061 0000 0000 0123</h3>
-                <button onclick={#popup}>
+                <button >
                   <img src="./images/copy.svg" alt="" />
                 </button>
               </div>
