--- a/single-card.html
+++ b/single-card.html
@@ -30,9 +30,9 @@
             <div class="tsh">
               <div class="inn">
                 <h3>5061 0000 0000 0123</h3>
-                <button >
+                <a href="#popup">
                   <img src="./images/copy.svg" alt="" />
-                </button>
+                </a>
               </div>
               <div class="inn">
                 <img class="" src="./images/teal.svg" alt="" />
